--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -10,6 +10,7 @@ include __mainBox
 include __breadcrumbs
 include __wideBlock
 include __procedure3
+include __card
 
 include __forms
 include __footer
@@ -185,30 +186,7 @@ body
             a.outerLink3(href="#", target="_blank", rel="nofollow") Купить
             span Все для домашнего ухода Вы можете приобрести в нашем <strong>Бьюти-бутике.</strong>
             
-        .popular__area
-          .title1
-            h2 Популярные процедуры
-          .popular.mainBox.clearfix
-            .mainBox__itemOuter
-              a.mainBox__item(href="#")
-                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                  img.kv-img(src="assets/img/w285h285.png", alt="")
-                span Описание первого блока в несколько строчек
-            .mainBox__itemOuter
-              a.mainBox__item(href="#")
-                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                  img.kv-img(src="assets/img/w285h285.png", alt="")
-                span Описание первого блока в несколько строчек
-            .mainBox__itemOuter
-              a.mainBox__item(href="#")
-                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                  img.kv-img(src="assets/img/w285h285.png", alt="")
-                span Описание первого блока в несколько строчек
-            .mainBox__itemOuter
-              a.mainBox__item(href="#")
-                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                  img.kv-img(src="assets/img/w285h285.png", alt="")
-                span Описание первого блока в несколько строчек
+        +card3
     +zBlock3
 
   .site__footer
