--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -70,6 +70,9 @@
 @import "__footer.css";
 @import "__footer_media.css";
 
+@import "__footer3.css";
+@import "__footer3_media.css";
+
 @import "__gallery.css";
 @import "__gallery_media.css";
 
