--- a/src/__card.pug
+++ b/src/__card.pug
@@ -1,12 +1,13 @@
 mixin card3
-  .card3__area.w0
-    .card3__outer.w1
+  .card3__area
+    .card3__outer
       .title3
         h2 Альтернативные процедуры
       .card3
         .card3__itemOuter
           a.card3__item(href="")
-            .card3__itemImg(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
+            .card3__itemImg
+              .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
             .card3__itemInfo
               .card3__itemInfoTitle Омоложение
               .card3__itemInfoContent
@@ -61,14 +62,16 @@ mixin card3
 
         .card3__itemOuter
           a.card3__item(href="")
-            .card3__itemImg(style="background-image: url(assets/img/problem/figura.jpg)")
+            .card3__itemImg
+              .card3__itemImgInner(style="background-image: url(assets/img/problem/figura.jpg)")
             .card3__itemInfo
               .card3__itemInfoTitle Коррекция фигуры
               .card3__itemInfoContent
                 p Lorem ipsum dolor sit amet dolor sit amet
         .card3__itemOuter
           a.card3__item(href="")
-            .card3__itemImg(style="background-image: url(assets/img/problem/figura.jpg)")
+            .card3__itemImg
+              .card3__itemImgInner(style="background-image: url(assets/img/problem/figura.jpg)")
             .card3__itemInfo
               .card3__itemInfoTitle Проблемы кожи
               .card3__itemInfoContent
@@ -79,7 +82,8 @@ mixin card3
                   li Контур лица
         .card3__itemOuter
           a.card3__item(href="")
-            .card3__itemImg(style="background-image: url(assets/img/problem/hairproblem.jpg)")
+            .card3__itemImg
+              .card3__itemImgInner(style="background-image: url(assets/img/problem/hairproblem.jpg)")
             .card3__itemInfo
               .card3__itemInfoTitle Проблемы с волосами
               .card3__itemInfoContent
@@ -90,7 +94,8 @@ mixin card3
                   li Контур лица
         .card3__itemOuter
           a.card3__item(href="")
-            .card3__itemImg(style="background-image: url(assets/img/problem/clear.jpg)")
+            .card3__itemImg
+              .card3__itemImgInner(style="background-image: url(assets/img/problem/clear.jpg)")
             .card3__itemInfo
               .card3__itemInfoTitle Очищение кожи
               .card3__itemInfoContent
@@ -101,7 +106,8 @@ mixin card3
                   li Контур лица
         .card3__itemOuter
           a.card3__item(href="")
-            .card3__itemImg(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
+            .card3__itemImg
+              .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
             .card3__itemInfo
               .card3__itemInfoTitle Удаление волос
               .card3__itemInfoContent
