--- a/src/__footer.pug
+++ b/src/__footer.pug
@@ -74,14 +74,14 @@ mixin footer3
               span
                 i.icon-ig
               p Центр косметологии и красоты
-            a(href="https://www.instagram.com/beauty_lounge_image/"  target="_blank")
-              span
-                i.icon-ig
-              p Имиджевый центр
-            a(href="https://www.instagram.com/beauty_lounge_cosmetology/"  target="_blank")
-              span
-                i.icon-ig
-              p Центр косметологии
+            //- a(href="https://www.instagram.com/beauty_lounge_image/"  target="_blank")
+            //-   span
+            //-     i.icon-ig
+            //-   p Имиджевый центр
+            //- a(href="https://www.instagram.com/beauty_lounge_cosmetology/"  target="_blank")
+            //-   span
+            //-     i.icon-ig
+            //-   p Центр косметологии
             a(href=""  target="_blank")
               span
                 i.icon-youtube3
