--- a/src/assets/css/__footer_media.css
+++ b/src/assets/css/__footer_media.css
@@ -31,9 +31,9 @@
     width: 50%;
     margin-bottom: 20px;
   }
-  .footer__linksTitle {
+  /* .footer__linksTitle {
     text-align: right;
-  }
+  } */
 
   .f3 {
     order: 4;
