--- a/src/assets/css/__header3_media.css
+++ b/src/assets/css/__header3_media.css
@@ -1,8 +1,8 @@
 @media only screen and (max-width: 1200px) {
-  .topLine3{
+  .topLine3 {
     padding: 10px;
   }
-  .header3{
+  .header3 {
     padding: 0 10px;
   }
 }
@@ -14,56 +14,55 @@
 }
 
 @media only screen and (max-width: 1024px) {
-
 }
 
 @media only screen and (max-width: 920px) {
-  .header3__menuBtn{
+  .header3__menuBtn {
     display: block;
   }
-  .topMenu3{
+  .topMenu3 {
     display: none;
   }
-  .topLine3__menu{
+  .topLine3__menu {
     display: none;
   }
- 
 }
 
 @media only screen and (max-width: 820px) {
 }
 
 @media only screen and (max-width: 768px) {
-  
 }
 
 @media only screen and (max-width: 600px) {
-  .topLine3__address{
+  .topLine3__address {
     margin: 0;
   }
-  .topLine3__time{
+  .topLine3__time {
     display: none;
   }
-  .topLine3__sLinkItem{
+  .topLine3__sLinkItem {
     margin: 0 20px 0 0;
   }
-  
+
+  .header3__area {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-  .topLine3__sLinkItem{
+  .topLine3__sLinkItem {
     margin: 0 10px 0 0;
   }
-  .topLine3__address i{
+  .topLine3__address i {
     display: none;
   }
 }
 
 @media only screen and (max-width: 414px) {
-  .topLine3{
+  .topLine3 {
     padding: 5px 10px;
   }
-  
 }
 
 @media only screen and (max-width: 320px) {
