--- a/src/assets/css/__forms_media.css
+++ b/src/assets/css/__forms_media.css
@@ -11,6 +11,9 @@
 }
 
 @media only screen and (max-width: 920px) {
+  .zBlock3 {
+    padding: 0 10px;
+  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -35,15 +38,45 @@
     display: flex;
     flex-direction: column;
   }
+  .form13 {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
+  .zBlock3__left {
+    display: none;
+  }
+
+  .zBlock3__right {
+    width: 100%;
+    padding: 0 30px 0 30px;
+  }
+  .zBlock3__intro h2 {
+    margin: 0 0 10px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  .zBlock3__area {
+    margin: 20px 0;
+  }
+  .zBlock3__intro {
+    margin-bottom: 10px;
+  }
+  .form13 input {
+    line-height: 2rem;
+    margin-bottom: 10px;
+  }
+  .form13 label {
+    margin-bottom: 5px;
+  }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 414px) {
+  .zBlock3__right {
+    padding: 0 20px 0 20px;
+  }
 }
 
 @media only screen and (max-width: 320px) {
