--- a/src/__forms.pug
+++ b/src/__forms.pug
@@ -47,7 +47,7 @@ mixin zBlock3
           //-     | политики
           //-     | конфиденциальности
           .alrightBox
-            input(type='checkbox' required='')
+            input.checkbox13(type='checkbox' required='')
             span Согласен на обработку персональных данных
           button.submit13(type='submit', name='submit13')
             | Записаться
