--- a/src/assets/css/typorraphy.css
+++ b/src/assets/css/typorraphy.css
@@ -79,7 +79,7 @@ strong {
 }
 
 .content ul {
-  /* padding: 0 0 15px 0; */
+  padding: 0 0 0 30px;
 }
 
 .content ol {
@@ -93,12 +93,12 @@ strong {
 }
 
 .content ul li {
-  padding: 0 0 0 2.125rem;
+  padding: 0 0 0 25px;
   position: relative;
   font-size: 1rem;
   line-height: 1.4;
   list-style: none;
-  margin: 0 0 1.25rem 0;
+  margin: 0 0 10px 0;
 }
 .content ul li:before {
   content: "";
