--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -185,8 +185,11 @@ body
           .outerLink3__area
             a.outerLink3(href="#", target="_blank", rel="nofollow") Купить
             span Все для домашнего ухода Вы можете приобрести в нашем <strong>Бьюти-бутике.</strong>
-            
-        +card3
+        .card3__area
+          .card3__outer
+            .title3
+              h2 Альтернативные процедуры    
+            +card3
     +zBlock3
 
   .site__footer
