--- a/src/assets/css/__mainTop2.css
+++ b/src/assets/css/__mainTop2.css
@@ -42,6 +42,7 @@
   width: 50%;
   height: 50%;
   position: absolute;
+  overflow: hidden;
 }
 
 .mainTop__menuItemOuter_a {
@@ -66,24 +67,33 @@
 }
 
 .colorBox_a {
-  background: #aba299;
-  color: #000;
+  /* background: #aba299; */
+  background: #9b3a83;
+  color: #fff;
 }
 .colorBox_b {
-  background: #6a6e79;
+  /* background: #6a6e79; */
+  background: #7c52be;
   color: #fff;
 }
 .colorBox_c {
-  background: #c24b35;
+  /* background: #c24b35; */
+  background: #c14032;
   color: #fff;
 }
 .colorBox_d {
-  background: #3a2f29;
+  /* background: #3a2f29; */
+  background: #e2b929;
   color: #fff;
 }
 
 .colorBox_e {
   background: var(--x1greySuperLight);
+}
+
+.colorBox_f {
+  background: #2e2e2e;
+  color: #fff;
 }
 
 .mainTop__menuItemWrapper {
@@ -101,8 +111,9 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 20px;
+  padding: 20px 20px;
   flex-direction: column;
+  justify-content: center;
   text-decoration: none;
 }
 .mainTop__menuItem:hover,
@@ -116,20 +127,40 @@
 }
 
 .mainTop__menuItemTitle {
-  font-size: 1.5rem;
+  font-size: 16px;
   font-weight: 600;
-  line-height: 1;
-  text-align: center;
+  line-height: 1.3;
+  text-align: left;
+  position: relative;
+  padding: 0 0 1rem 0;
+}
+.mainTop__menuItemTitle:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 2.5rem;
+  height: 2px;
+  background: #fff;
 }
 
 .mainTop__menuItemTop i {
-  font-size: 3rem;
+  font-size: 8rem;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  opacity: 0.1;
+  transition: all 0.3s;
+}
+.mainTop__menuItem:hover i,
+.mainTop__menuItem:focus i {
+  opacity: 0.3;
 }
 
 .mainTop__menuItemBottom {
   width: 100%;
-  margin-top: auto;
-  font-size: 1rem;
+  margin-top: 20px;
+  font-size: 14px;
   line-height: 1.5;
 }
 
@@ -214,7 +245,7 @@
   margin-right: 10px;
 }
 .mainTop__hideBoxInnerTitle span {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .mainTop__hideBoxClose {
@@ -222,7 +253,7 @@
 }
 
 .mainTop__hideBoxClose i {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .mainTop__hideBoxInnerContent {
@@ -251,4 +282,92 @@
   color: #000;
   font-size: 1.5rem;
   line-height: 1.5;
+}
+
+.mainTopLineBox {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0 0 0;
+}
+
+.mainTopLineBox__leftOuter {
+  width: 30%;
+}
+
+.mainTopLineBox__leftWrapper {
+  /* padding-top: 30%; */
+  height: 100%;
+  position: relative;
+}
+
+.mainTopLineBox__leftItem {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 20px 20px;
+  align-items: center;
+  text-decoration: none;
+}
+
+.mainTopLineBox__itemTitle {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+  position: relative;
+  padding: 0 0 1rem 0;
+  white-space: nowrap;
+}
+
+.mainTopLineBox__itemTitle:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 2.5rem;
+  height: 2px;
+  background: #fff;
+}
+
+.mainTopLineBox__leftItem i {
+  font-size: 5rem;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  opacity: 0.1;
+  transition: all 0.3s;
+}
+
+.mainTopLineBox__leftItem:hover i {
+  opacity: 0.3;
+}
+
+.mainTopLineBox__itemDesc {
+  padding: 0 10px 0 30px;
+  font-size: 14px;
+  line-height: 1.5;
+  /* flex: 1; */
+}
+
+.mainTopLineBox__rightOuter {
+  width: 70%;
+  padding: 0 0 0 20px;
+}
+
+.mainTopLineBox__rightLink1 {
+  text-decoration: none;
+  display: block;
+}
+
+.mainTopLineBox__rightLink2 {
+  text-decoration: none;
+  display: none;
+}
+
+.mainTopLineBox__rightOuter img {
+  display: block;
+  width: 100%;
 }
