--- a/src/assets/css/__mainTop2_media.css
+++ b/src/assets/css/__mainTop2_media.css
@@ -28,12 +28,16 @@
     width: 25%;
     height: auto;
     padding: 5px;
+    /* height: 100%; */
   }
+  /* .mainTop__menuItemTop {
+    align-items: flex-start;
+  } */
 
   .mainTop__menuItemWrapper {
     width: 100%;
     height: 0;
-    padding-top: 60%;
+    padding-top: 70%;
     position: relative;
     top: auto;
     right: auto;
@@ -58,6 +62,12 @@
     height: auto;
     transform: translate(0, -50%);
   } */
+  .mainTopLineBox {
+    padding: 0;
+  }
+  .mainTopLineBox__rightOuter {
+    padding: 0 0 0 10px;
+  }
 }
 
 @media only screen and (max-width: 920px) {
@@ -68,11 +78,13 @@
 
 @media only screen and (max-width: 820px) {
   .mainTop__menuItemWrapper {
-    height: auto;
+    height: 100%;
     padding: 0;
   }
+
   .mainTop__menuItem {
     position: relative;
+    height: 100%;
   }
   .mainTop__menuItemBottom {
     display: none;
@@ -80,13 +92,33 @@
   .mainTop__menuItemTop {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
   .mainTop__menuItemTitle {
     order: 2;
     margin-top: 5px;
     font-weight: 400;
     font-size: 1.25rem;
+  }
+  .mainTop__menuItemTop i {
+    font-size: 5rem;
+  }
+  .mainTopLineBox__leftItem i {
+    font-size: 5rem;
+  }
+  .mainTopLineBox__rightLink1 {
+    display: none;
+  }
+
+  .mainTopLineBox__rightLink2 {
+    display: block;
+  }
+
+  /* .mainTopLineBox__leftItem {
+    flex-direction: column;
+  } */
+  .mainTopLineBox__itemDesc {
+    display: none;
   }
 }
 
@@ -98,10 +130,19 @@
     width: 70%;
   }
   .mainTop__menuItem {
-    padding: 15px 5px;
+    padding: 15px 10px;
+  }
+  .mainTopLineBox__leftItem {
+    padding: 15px 10px;
   }
   .mainTop__menuItemTitle {
     font-size: 1.125rem;
+  }
+  .mainTop__menuItemTop i {
+    font-size: 4rem;
+  }
+  .mainTopLineBox__leftItem i {
+    font-size: 4rem;
   }
 }
 
@@ -111,6 +152,12 @@
 @media only screen and (max-width: 600px) {
   .mainTop__menuItemOuter {
     width: 50%;
+  }
+  .mainTop__menuItemTop i {
+    font-size: 3rem;
+  }
+  .mainTopLineBox__leftItem i {
+    font-size: 3rem;
   }
 }
 
@@ -125,14 +172,17 @@
     font-size: 1.25rem;
   }
 
-  .mainTop__menuItemTop i {
+  /* .mainTop__menuItemTop i {
     font-size: 2rem;
-  }
+  } */
   .mainTop__hideBox {
     width: 90%;
   }
   .mainTop__menuItemTitle {
     font-size: 1.125rem;
+  }
+  .mainTopLineBox {
+    padding: 5px 0 0 0;
   }
 }
 
