--- a/src/__mainBox.pug
+++ b/src/__mainBox.pug
@@ -77,9 +77,13 @@ mixin mainBox
 mixin mainContent
   .mainContent__area.w0
     .mainContent__wrapper.w1
-      .mainContent(style="background-image: url(assets/img/img-bg-about_main2.jpg)")
-        .mainContent__inner
+      .mainContent
+        .mainContent__left 
           .content
+            h2 Бьюти Лаунж
             p Центр косметологии и красоты БЬЮТИ ЛАУНЖ - ваш надежный проводник в мире красоты, здоровья и долголетия! Философия нашего Центра - это персонифицированный индивидуальный подход к каждому Гостю!
             p В Центре косметологии и красоты БЬЮТИ ЛАУНЖ гармонично сочетают высокий профессионализм, разумный подход к красоте и здоровью, и главное, желание творить!
           a.mainContent__redmore(href="#") Узнать о нас больше 
+        .mainContent__right
+          img(src="assets/img/img-bg-about_main2.jpg", alt="")
+          
