--- a/src/assets/css/__mainBox.css
+++ b/src/assets/css/__mainBox.css
@@ -189,22 +189,21 @@
 .mainContent {
   position: relative;
   width: 100%;
-  padding: 50px;
-  display: flex;
-  height: 40vh;
   display: flex;
   align-items: center;
-  background-size: contain;
-  background-position: right center;
-  background-repeat: no-repeat;
-  /* background-color: #f2f2f4; */
+  justify-content: space-between;
+  padding: 30px 0;
 }
 
-.mainContent__inner {
+.mainContent__left {
   position: relative;
   width: 40%;
   display: flex;
   flex-direction: column;
+}
+
+.mainContent__left h2 {
+  margin: 0 0 20px 0;
 }
 
 .mainContent__redmore {
@@ -220,4 +219,13 @@
 
 .mainContent__redmore:hover {
   background: var(--link1hov);
+}
+
+.mainContent__right {
+  width: 50%;
+}
+
+.mainContent__right img {
+  display: block;
+  width: 100%;
 }
