--- a/src/assets/css/__mainBox_media.css
+++ b/src/assets/css/__mainBox_media.css
@@ -52,10 +52,6 @@
     padding: 20px;
     background: rgba(255, 255, 255, 0.8);
   }
-  .mainContent {
-    background-position: center center;
-    background-size: cover;
-  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -91,12 +87,24 @@
     margin-top: 0.3175rem;
   }
   .mainContent {
-    height: auto;
-    background-size: cover;
+    flex-direction: column;
+  }
+  .mainContent__left {
+    width: 100%;
+    padding: 0 0 20px 0;
+  }
+  .mainContent__right {
+    width: 100%;
   }
   .mainBox__item span {
     height: 20%;
     font-size: 1rem;
+  }
+  .mainContent__left h2 {
+    margin: 0 0 10px 0;
+  }
+  .mainContent {
+    padding: 20px 0;
   }
 }
 
@@ -115,7 +123,7 @@
     width: 100%;
   }
   .mainContent {
-    padding: 30px;
+    padding: 10px 0;
   }
 }
 
@@ -128,9 +136,6 @@
   }
   .mainBox__itemOuter_rightBox {
     width: 100%;
-  }
-  .mainContent {
-    padding: 10px;
   }
   .mainBox__item span {
     font-size: 0.875rem;
