--- a/src/__news.pug
+++ b/src/__news.pug
@@ -84,3 +84,66 @@ mixin news
             a(href="#") 5
           li.control
             a(href="#") &#9658;
+
+
+
+mixin blogSlider
+  .blogSlider__area
+    .blogSlider__outer
+      .blogSliderCaroucel
+        .swiper-container.blogSlider-container
+          .swiper-wrapper.blogSlider-wrapper
+            .swiper-slide.blogSlider-slide
+              .blogSlider-slideInner
+                a.blogSliderItem
+                  .blogSliderItem__cover 
+                    .blogSliderItem__coverVideo.videoBox_i
+                      iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+                    //- .blogSliderItem__coverImg
+                    //-   .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                  .blogSliderItem__info 
+                    .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет и поздравления от наших докторов!
+                    .blogSliderItem__date 30.12.2020
+            .swiper-slide.blogSlider-slide
+              .blogSlider-slideInner
+                a.blogSliderItem
+                  .blogSliderItem__cover 
+                    .blogSliderItem__coverVideo.videoBox_i
+                      iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+                    //- .blogSliderItem__coverImg
+                    //-   .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                  .blogSliderItem__info 
+                    .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет!
+                    .blogSliderItem__date 30.12.2020
+            .swiper-slide.blogSlider-slide
+              .blogSlider-slideInner
+                a.blogSliderItem
+                  .blogSliderItem__cover 
+                    .blogSliderItem__coverImg
+                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                  .blogSliderItem__info 
+                    .blogSliderItem__title Дорогие друзья, передаём Вам привет и поздравления от наших докторов!
+                    .blogSliderItem__date 30.12.2020
+            .swiper-slide.blogSlider-slide
+              .blogSlider-slideInner
+                a.blogSliderItem
+                  .blogSliderItem__cover 
+                    .blogSliderItem__coverImg
+                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                  .blogSliderItem__info 
+                    .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет и поздравления от наших докторов!
+                    .blogSliderItem__date 30.12.2020
+            .swiper-slide.blogSlider-slide
+              .blogSlider-slideInner
+                a.blogSliderItem
+                  .blogSliderItem__cover 
+                    .blogSliderItem__coverImg
+                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                  .blogSliderItem__info 
+                    .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет и поздравления от наших докторов!
+                    .blogSliderItem__date 30.12.2020
+                
+        .blogSlider__left
+          i.icon-arr-left1
+        .blogSlider__right
+          i.icon-arr-right1
