--- a/src/assets/css/__news.css
+++ b/src/assets/css/__news.css
@@ -62,3 +62,131 @@
   line-height: 1.3;
   color: var(--tc0);
 }
+
+/**************** Слайдер новостей на главной ******************/
+.blogSlider__area {
+  width: 100%;
+}
+
+.blogSlider__outer {
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+  padding: 1rem 3rem;
+}
+
+.blogSliderCaroucel {
+  width: 100%;
+  position: relative;
+}
+
+.imgSlider-slide {
+  height: auto;
+}
+
+.blogSlider-container {
+  position: relative;
+  /* width: 90%; */
+  margin: 0 auto;
+  /* padding: 0 20px; */
+}
+
+.blogSlider-wrapper {
+  align-items: stretch;
+  padding: 0 0 10px 0;
+}
+.blogSlider-slide {
+  height: auto;
+  /* padding: 0 20px; */
+}
+
+.blogSlider-slideInner {
+  position: relative;
+}
+
+.blogSliderItem {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+}
+
+.blogSliderItem__cover {
+  width: 100%;
+}
+
+.blogSliderItem__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.blogSliderItem__title {
+}
+
+.blogSlider-slide a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: all 0.3s;
+}
+
+.blogSlider__left,
+.blogSlider__right {
+  position: absolute;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  top: 50%;
+  margin-top: -1.25rem;
+  background: #fff;
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.blogSlider__left:hover,
+.blogSlider__right:hover {
+  background: var(--brick);
+}
+
+.blogSlider__left:focus,
+.blogSlider__right:focus {
+  border: none;
+  outline: none;
+}
+
+.blogSlider__left.disabled,
+.blogSlider__right.disabled {
+  display: none;
+}
+
+.blogSlider__left {
+  left: -3rem;
+}
+
+.blogSlider__right {
+  right: -3rem;
+}
+
+.blogSlider__left i,
+.blogSlider__right i {
+  font-size: 1rem;
+  color: var(--brown1);
+  transition: all 0.3s;
+}
+
+.blogSlider__left:hover i,
+.blogSlider__right:hover i {
+  color: #fff;
+}
