--- a/src/index.pug
+++ b/src/index.pug
@@ -14,6 +14,7 @@ include __slider1
 include __wideBlock
 include __mainBox
 include __blog
+include __news
 include __newsInMain
 include __forms
 include __footer
@@ -45,9 +46,9 @@ html(lang="ru-RU")
       //- +wideBlock
       //- +mainBox
       +mainContent
-      +blog
-      +newsInMain
-      +zBlock1
+      +blogSlider
+      //- +newsInMain
+      //- +zBlock1
 
     .site__footer
       +footer 
