--- a/src/__news.pug
+++ b/src/__news.pug
@@ -95,7 +95,7 @@ mixin blogSlider
           .swiper-wrapper.blogSlider-wrapper
             .swiper-slide.blogSlider-slide
               .blogSlider-slideInner
-                a.blogSliderItem
+                a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
                     .blogSliderItem__coverVideo.videoBox_i
                       iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
@@ -106,7 +106,7 @@ mixin blogSlider
                     .blogSliderItem__date 30.12.2020
             .swiper-slide.blogSlider-slide
               .blogSlider-slideInner
-                a.blogSliderItem
+                a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
                     .blogSliderItem__coverVideo.videoBox_i
                       iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
@@ -117,7 +117,7 @@ mixin blogSlider
                     .blogSliderItem__date 30.12.2020
             .swiper-slide.blogSlider-slide
               .blogSlider-slideInner
-                a.blogSliderItem
+                a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
                     .blogSliderItem__coverImg
                       .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
@@ -126,7 +126,7 @@ mixin blogSlider
                     .blogSliderItem__date 30.12.2020
             .swiper-slide.blogSlider-slide
               .blogSlider-slideInner
-                a.blogSliderItem
+                a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
                     .blogSliderItem__coverImg
                       .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
@@ -135,7 +135,7 @@ mixin blogSlider
                     .blogSliderItem__date 30.12.2020
             .swiper-slide.blogSlider-slide
               .blogSlider-slideInner
-                a.blogSliderItem
+                a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
                     .blogSliderItem__coverImg
                       .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
@@ -143,7 +143,8 @@ mixin blogSlider
                     .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет и поздравления от наших докторов!
                     .blogSliderItem__date 30.12.2020
                 
-        .blogSlider__left
-          i.icon-arr-left1
-        .blogSlider__right
-          i.icon-arr-right1
+        .blogSlider__pagination
+        //- .blogSlider__left
+        //-   i.icon-arr-left1
+        //- .blogSlider__right
+        //-   i.icon-arr-right1
